# c_cnn_from_scratch

./: .gitignore  README.md
c_cnn/: CMakeLists.txt
c_cnn/rawnetwork/: Makefile  main
c_cnn/rawnetwork/include/: activators.h  components.h  computational.h  functional.h  helpers.h  types.h
c_cnn/rawnetwork/src/: activators.c  components.c  computational.c  functional.c  helpers.c  main.c
py_cnn/: helpers.py  main.py  mnist_loader.py  network.py  test.py
py_cnn/parameters_torch/: params.pth
